--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,13 @@
   text-align: center;
   background-image: url('../public/sunny_sky.jpg');
   background-size: auto;
+  padding-bottom: 30rem;
 }
 
-
-/* .search-box{
-} */
+.header{
+  font-size: 3.5rem;
+  margin-bottom: 3rem;
+}
 
 .search-bar{
   height: 3rem;
@@ -14,6 +16,7 @@
   margin-top: 5rem;
   margin-bottom: 5rem;
   font-size: 1.5rem;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)
 }
 
 .location{
@@ -37,4 +40,12 @@
 .weather{
   font-size: 1.5rem;
   margin-bottom: 1rem;
+}
+
+.weather-box {
+  box-shadow: 0 4px 8px 0 rgba(0.2,0.2,0.2,0.5);
+  display: flex;
+  flex-direction: column;
+  margin: 4rem 30rem;
+  padding: 20px 
 }
