--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&family=Fredoka:wght@300&family=Nanum+Gothic&family=Quicksand:wght@500&family=Roboto+Mono:wght@300&family=Ubuntu:wght@300;400&display=swap');
+
 .App {
   text-align: center;
   background-image: url('../public/sunny_sky.jpg');
   background-size: auto;
   padding-bottom: 30rem;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .header{
   font-size: 3.5rem;
+  font-weight: bold;
   margin-bottom: 3rem;
 }
 
@@ -39,7 +43,9 @@
 
 .weather{
   font-size: 1.5rem;
+  font-style: italic;
   margin-bottom: 1rem;
+
 }
 
 .weather-box {
